[gd_scene load_steps=6 format=2]

[ext_resource path="res://Styles/Button-Pressed.tres" type="StyleBox" id=1]
[ext_resource path="res://Scripts/FloatingItem.gd" type="Script" id=2]
[ext_resource path="res://Styles/Button-Hover.tres" type="StyleBox" id=3]
[ext_resource path="res://Styles/Button-Normal.tres" type="StyleBox" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Asteroid" type="Node2D" groups=["Asteroid"]]
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
focus_mode = 0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 4 )
enabled_focus_mode = 0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
